--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -9,27 +9,37 @@ table {
   tr {
     border: 1px solid lightgray;
   }
+
   th {
     font-size: 25px;
     padding: 10px;
   }
+
   td {
     font-size: 23px;
     padding: 10px;
   }
+
   .date {
     font-style: italic;
   }
+
   .tiles {
     display: flex;
 
     .blue-tile {
       display: flex;
+
       svg {
         fill: cornflowerblue;
         margin-right: 5px;
       }
+
       color: cornflowerblue;
     }
   }
+}
+
+.active {
+  border: 4px solid cornflowerblue
 }
