--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -1,3 +1,33 @@
+.table-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .searcher-form {
+    position: relative;
+    width: 20%;
+    margin-top: 20px;
+
+    .searcher-input {
+      padding: 10px;
+      font-size: 17px;
+      border: 1px solid grey;
+      float: left;
+      width: 80%;
+      background: #f1f1f1;
+      border-radius: 5px
+    }
+
+    svg {
+      fill: black;
+      position: absolute;
+      top: 10px;
+      left: 140px;
+      right: 0px;
+    }
+  }
+}
+
 table {
   background: white;
   color: black;
@@ -5,6 +35,10 @@ table {
   margin-top: 20px;
   text-align: left;
   border-collapse: collapse;
+
+
+
+
 
   tr {
     border: 1px solid lightgray;
